# routes/index.js
@@ -8,13 +8,13 @@ const path = require("path");
 // Import File routes
 const User = require("./user.routes")
 const Profile = require("./profile.routes")
-const cityRoute = require("./city.routes")
 const Flights = require("./flight.routes")
+const classRoute = require("./seat_class.routes")
+const scheduleRoute = require("./schedule.routes")
+const cityRoute = require("./city.routes")
 const continentRoute = require("./continent.routes")
 const Country = require("./country.routes")
 const Plane = require("./plane.routes")
-const classRoute = require("./seat_class.routes")
-const scheduleRoute = require("./schedule.routes")
 
 const swagger_path = path.resolve(__dirname, "../docs/api-docs.yaml");
 const customCssUrl =
@@ -32,7 +32,12 @@ router.use("/api-docs", swaggerUI.serve, swaggerUI.setup(swaggerDocument, { cust
 // API
 router.use("/api/v1", User)
 router.use("/api/v1", Profile)
-router.use("/api/v1", cityRoute)
 router.use("/api/v1", Flights)
+router.use("/api/v1", classRoute)
+router.use("/api/v1", scheduleRoute)
+router.use("/api/v1", cityRoute)
+router.use("/api/v1", continentRoute)
+router.use("/api/v1", Country)
+router.use("/api/v1", Plane)
 
 module.exports = router;
